single-player login screen animation mobile fix

--- a/style.css
+++ b/style.css
@@ -524,9 +524,9 @@ iframe {
   
   #greeting {
     width: 100vw;
-    height: 35vw;
-    margin: -17.5vw 0 0 -50vw;
-    padding: 12vw 4vw 12vw 4vw;
+    height: 35vh;
+    margin: -17.5vh 0 0 -50vw;
+    padding: 14.5vw 4vw 14.5vw 4vw;
     font-size: 6vw;
     line-height: 6vw;
     border-radius: 0 0 15vw 15vw;
